# basic-rest-api-app-test-task

./: .dockerignore  .env.example  .env.local  Dockerfile  Makefile  QUICK_START.md  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  test_api.sh
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: main.py
app/api/: activities.py  buildings.py  organizations.py
app/core/: auth.py  geo_utils.py
app/models/: models.py
app/schemas/: schemas.py
scripts/: seed_data.py
tests/: __init__.py  conftest.py  test_activities.py  test_auth.py  test_buildings.py  test_geo_search.py  test_hierarchical_search.py  test_organizations.py
